--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:name=".Login.JoinActivity"
             android:label="@string/title_activity_join" >
         </activity>
+        <activity
+            android:name=".Report.ReportWriteActivity"
+            android:label="@string/title_activity_report_write" >
+        </activity>
     </application>
 
 </manifest>
