--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:label="@string/title_activity_login" >
         </activity>
         <activity
+            android:name=".Login.FindPWActivity"
+            android:label="@string/title_activity_findpw" >
+        </activity>
+        <activity
             android:name=".Login.JoinActivity"
             android:label="@string/title_activity_join" >
         </activity>
